# substack-newsletters-search-system

./: .dockerignore  .gitignore  DOCUMENTATION.md  Dockerfile  LICENSE  Makefile  PROJECTFLOW.md  README.md  pyproject.toml  requirements.txt
src/configs/: feeds_rss.yaml
src/infrastructure/supabase/: init_session.py
