[project]
name = "substack-newsletters-search-system"
version = "1.0.0"
description = "RAG application for searching Substack articles and answering questions"
readme = "README.md"
authors = [
    {name = "Ankur Yadav"}
]
license = {text = "MIT License"}
requires-python = ">=3.11"

dependencies = [
"aiohttp>=3.13",
"beautifulsoup4>=4.14",
"fastapi[standard]>=0.135",
"fastembed>=0.8",
"gradio>=6.9",
"langchain>=1.2",
"langchain-text-splitters>=1.1",
"loguru>=0.7",
"lxml>=6.0",
"markdown>=3.10",
"markdownify>=1.2",
"openai>=2.29",
"opik>=1.10",
"pandas>=3.0",
"prefect>=3.6",
"psutil>=7.2",
"psycopg2-binary>=2.9",
"pydantic>=2.12",
"pydantic-settings>=2.13",
"python-dotenv>=1.2",
"qdrant-client>=1.17",
"requests>=2.32",
"sqlalchemy>=2.0",
"supabase>=2.28",
"tiktoken>=0.12",
"uvicorn>=0.42",
"pytest-asyncio",
"responses",
]

[dependency-groups]
dev = [
"pytest>=9.0",
"ruff",
"mypy",
"pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
